@@ -49,6 +49,7 @@ c - crash     b - bug fix    e - enhancement    f - new feature  n - note
   e - Change size of transfer block used on job rerun from 4k to 64k.
   b - With nvidia gpus, TORQUE was losing the directive of what nodes it should
       run the job on from Moab. Corrected.
+  e - add the $PBS_WALLTIME variable to jobs, thanks to a patch from Mark Roberts 
 
 3.0.4
   c - fix a buffer being overrun with nvidia gpus enabled
